--- a/DcComics.html
+++ b/DcComics.html
@@ -31,7 +31,6 @@
 
 				<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/anime.html">Anime</a>
 					<ul>
-						<li><a href="">Animes</a></li>
 						<li><a href="">Figuras</a>
 						<li><a href="">Funko Pops</a></li>
 					</ul>
@@ -39,9 +38,9 @@
 				
 				<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/coleccionables.html">Coleccionables</a>
 					<ul>
-						<li><a href="">Marvel</a></li>
-						<li><a href="">DC</a></li>
-						<li><a href="">Réplicas</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/marvelcolect.html">Marvel</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/dccolect.html">DC</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/replicas.html">Réplicas</a></li>
 
 					</ul>
 				</li>
@@ -77,44 +76,58 @@
 		</div>
 	</section>
 
-	<section id="ventas">
-		<div class="venta">
-				
-				<article>
-					<a href=""><img src="ventaM/venom.jpg">
-					<div class="descripcion">
-						<h3>Venom:</h3>
-						<h4>El enemigo interno</h4>
-					</div>
-					</a>
-
-				</article>
-
-				<article>
-					<a href=""><img src="ventaM/4.jpg">
-					<div class="descripcion">
-						<h3>Fantastics Four:</h3>
-					</div>
-					</a>
-				</article>
-				<article>
-					<a href=""><img src="ventaM/carnage.jpg">
-					<div class="descripcion">
-						<h3>Carnage:</h3>
-						<p>Clasico.</p>
-					</div>
-					</a>
-				</article>
-				<article>
-					<a href=""><img src="ventaM/loki.jpg">
-					<div class="descripcion">
-						<h3>Loki:</h3>
-						<h4>El dios que cayo a la tierra.</h4>
-					</div>
-					</a>
-				</article>
-
+	<section class="container-products">
+		<div class="product">
+			<article>
+				<img src="ventaM/batman2.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Batman Incorporated vol.2: Los más buscados de Gotham.</h3>
+				<span class="product__price">$309.00</span>
 			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/super.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Superman: ¿Que sucedió con el hombre del mañana?.</h3>
+				<span class="product__price">$154.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/joker.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Joker: Killer Smile.</h3>
+				<span class="product__price">$409.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/dark.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Dark Nights Death Metal #6.</h3>
+				<span class="product__price">$69.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/batman.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Batman: Muerte por Diseño.</h3>
+				<span class="product__price">$154.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		
 	</section>
 
 
