--- a/dccolect.html
+++ b/dccolect.html
@@ -69,30 +69,83 @@
 			</ul>
 		</div>
 
-		<section id="contenido">
-			<h1>Series.</h1>
-		</section>
 
 		<section id="contenido">
 		<div class="recomendaciones">
-			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesucm.html"><img src="imagene/ucm.jpg"></a>
-			</article>
+			<img src="imagene/dc1.jpg">
 		</div>
 	</section>
 
-
-	<section id="contenido">
-		<div class="recomendaciones">
+	<section class="container-products">
+		<div class="product">
 			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesdc.html"><img src="imagene/dcuniverse.jpg"></a>
+				<img src="figuras/joker.jpg" alt="" class="product__img">
 			</article>
+			<div class="description">
+				<h3 class="product__title">Joker.</h3>
+				<span class="product__price">$699.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
 		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/nigth.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Nightwing.
+				</h3>
+				<span class="product__price">$699.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/batman.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Batman.
+				</h3>
+				<span class="product__price">$1,499.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/batman2.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Batman.</h3>
+				<span class="product__price">$699.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/super.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Superman</h3>
+				<span class="product__price">$899.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/superman.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Superman.</h3>
+				<span class="product__price">$1,099.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		
 	</section>
 
 
-	
-	
+
+	</main>
+
 	<footer>
 		<div class="contenedor">
 			<p class="copy">Asgard Comics &copy;  |  Todos los derechos reservados a sus respectivos autores y editoriales.</p>
