--- a/mangaVenta.html
+++ b/mangaVenta.html
@@ -69,30 +69,90 @@
 			</ul>
 		</div>
 
-		<section id="contenido">
-			<h1>Series.</h1>
-		</section>
 
 		<section id="contenido">
 		<div class="recomendaciones">
+			<img src="imagene/manga.jpg">
+		</div>
+	</section>
+
+	<section class="container-products">
+		<div class="product">
 			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesucm.html"><img src="imagene/ucm.jpg"></a>
+				<img src="ventaM/given.jpg" alt="" class="product__img">
 			</article>
+			<div class="description">
+				<h3 class="product__title">Given #1</h3>
+				<span class="product__price">$119.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/onepiece.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">One Piece #1</h3>
+				<span class="product__price">$99.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/jujutsu.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Jujutsu Kaisen #0</h3>
+				<span class="product__price">$119.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/chainsaw.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Chain Saw Man #1.</h3>
+				<span class="product__price">$129.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/chainsaw2.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Chain Saw Man #2</h3>
+				<span class="product__price">$129.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/chainsaw3.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Chain Saw Man #3</h3>
+				<span class="product__price">$129.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="ventaM/demon.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">#1 de Kimetsu No Yaiba Demon Slayer</h3>
+				<span class="product__price">$119.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
 		</div>
 	</section>
 
 
-	<section id="contenido">
-		<div class="recomendaciones">
-			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesdc.html"><img src="imagene/dcuniverse.jpg"></a>
-			</article>
-		</div>
-	</section>
 
+	</main>
 
-	
-	
 	<footer>
 		<div class="contenedor">
 			<p class="copy">Asgard Comics &copy;  |  Todos los derechos reservados a sus respectivos autores y editoriales.</p>
