--- a/marvelcolect.html
+++ b/marvelcolect.html
@@ -69,30 +69,92 @@
 			</ul>
 		</div>
 
-		<section id="contenido">
-			<h1>Series.</h1>
-		</section>
 
 		<section id="contenido">
 		<div class="recomendaciones">
+			<img src="imagene/marvel1.jpg">
+		</div>
+	</section>
+
+	<section class="container-products">
+		<div class="product">
 			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesucm.html"><img src="imagene/ucm.jpg"></a>
+				<img src="figuras/cap.png" alt="" class="product__img">
 			</article>
+			<div class="description">
+				<h3 class="product__title">Capitan América.</h3>
+				<span class="product__price">$2,000.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/capitana.png" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Capitana Marvel.
+				</h3>
+				<span class="product__price">$499.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/falcon.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Falcon Capitan América.
+				</h3>
+				<span class="product__price">$550.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/siniester.png" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Mr. Siniester</h3>
+				<span class="product__price">$700.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/ironman.png" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Iron Man Mark LXXXV</h3>
+				<span class="product__price">$700.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/panther.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Black Panther.</h3>
+				<span class="product__price">$550.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="figuras/spiderman.jpg" alt="" class="product__img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Spider-Man</h3>
+				<span class="product__price">$800.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
 		</div>
 	</section>
 
 
-	<section id="contenido">
-		<div class="recomendaciones">
-			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesdc.html"><img src="imagene/dcuniverse.jpg"></a>
-			</article>
-		</div>
-	</section>
 
+	</main>
 
-	
-	
 	<footer>
 		<div class="contenedor">
 			<p class="copy">Asgard Comics &copy;  |  Todos los derechos reservados a sus respectivos autores y editoriales.</p>
