--- a/replicas.html
+++ b/replicas.html
@@ -69,30 +69,130 @@
 			</ul>
 		</div>
 
-		<section id="contenido">
-			<h1>Series.</h1>
-		</section>
 
 		<section id="contenido">
 		<div class="recomendaciones">
+			<img src="imagene/replica.jpg">
+		</div>
+	</section>
+
+	<section class="container-products">
+		<div class="product">
 			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesucm.html"><img src="imagene/ucm.jpg"></a>
+				<img src="replicas/escudo.jpg" alt="" class="product_img">
 			</article>
+			<div class="description">
+				<h3 class="product__title">Escudo Capitan América.</h3>
+				<span class="product__price">$2,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/hydra.png" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Red Skull y Tesseract Box.</h3>
+				<span class="product__price">$2,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/mjolnir.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Mjolnir</h3>
+				<span class="product__price">$7,000.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/spiderman.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Casco Spider-Man.</h3>
+				<span class="product__price">$1,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/ironman.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Casco Iron-Man.</h3>
+				<span class="product__price">$3,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/nano.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Nano Guantelete.</h3>
+				<span class="product__price">$2,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/infinito.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Guantelete del infinito.</h3>
+				<span class="product__price">$2,500.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/panther.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Casco Black Panther.</h3>
+				<span class="product__price">$2,000.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/star.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Casco Starlord.</h3>
+				<span class="product__price">$1,800.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/batarang.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Batarang Batman.</h3>
+				<span class="product__price">$2,699.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
+		</div>
+		<div class="product">
+			<article>
+				<img src="replicas/bateria.jpg" alt="" class="product_img">
+			</article>
+			<div class="description">
+				<h3 class="product__title">Bateria Linterna Verde.</h3>
+				<span class="product__price">$2,200.00</span>
+			</div>
+			<a class="icon-agregar" href=""></a>
 		</div>
 	</section>
 
 
-	<section id="contenido">
-		<div class="recomendaciones">
-			<article>
-				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/seriesdc.html"><img src="imagene/dcuniverse.jpg"></a>
-			</article>
-		</div>
-	</section>
 
+	</main>
 
-	
-	
 	<footer>
 		<div class="contenedor">
 			<p class="copy">Asgard Comics &copy;  |  Todos los derechos reservados a sus respectivos autores y editoriales.</p>
