--- a/coleccionables.html
+++ b/coleccionables.html
@@ -31,7 +31,6 @@
 
 				<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/anime.html">Anime</a>
 					<ul>
-						<li><a href="">Animes</a></li>
 						<li><a href="">Figuras</a>
 						<li><a href="">Funko Pops</a></li>
 					</ul>
@@ -39,9 +38,9 @@
 				
 				<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/coleccionables.html">Coleccionables</a>
 					<ul>
-						<li><a href="">Marvel</a></li>
-						<li><a href="">DC</a></li>
-						<li><a href="">Réplicas.</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/marvelcolect.html">Marvel</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/dccolect.html">DC</a></li>
+						<li><a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/replicas.html">Réplicas.</a></li>
 
 					</ul>
 				</li>
@@ -77,7 +76,7 @@
 		<section id="contenido">
 		<div class="recomendaciones">
 			<article>
-				<a href=""><img src="imagene/marvel1.jpg"></a>
+				<a href="file:///C:/Users/DELL/Desktop/Escuela/7%C2%BA%20semestre/Programacion%20WEB/Proyecto/marvelcolect.html"><img src="imagene/marvel1.jpg"></a>
 			</article>
 		</div>
 	</section>
